# personal-site

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  install.sh  package-lock.json  package.json
backend/: .gitignore  README.md  pyproject.toml
backend/app/: auth.py  database.py  main.py  migrate.py  models.py  schemas.py  seed.py
backend/app/routers/: auth.py  categories.py  dashboard.py  posts.py  projects.py  socials.py  uploads.py
backend/tests/: test_password_change.py
src/: App.tsx  index.css
src/components/: AllNews.css  AllNews.tsx  AllProjects.css  AllProjects.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx  Hero.css  Hero.tsx  HomeSection.css  HomeSection.tsx  Icons.tsx  LinksBlock.css  LinksBlock.tsx  MarkdownContent.css  MarkdownContent.tsx  Modal.css  Modal.tsx  NewsFeed.css  NewsFeed.tsx  PostModal.tsx  ProjectMedia.tsx  ProjectModal.tsx  ProjectPage.css  ProjectPage.tsx  Projects.css  Projects.tsx  Terms.css  Terms.tsx
src/components/admin/: AdminLogin.css  AdminLogin.tsx  AdminPanel.css  AdminPanel.tsx  CategoriesEditor.tsx  DashboardView.tsx  LinksEditor.tsx  MarkdownEditor.css  MarkdownEditor.tsx  PostsEditor.tsx  ProjectsEditor.tsx  SocialsEditor.tsx  UsersEditor.tsx
src/context/: AuthContext.tsx  DataContext.tsx  ThemeContext.tsx  auth-context.ts  data-context.ts  data-context.tsx  theme-context.ts
src/data/: posts.ts  projects.ts  socials.ts
src/hooks/: useVisitorCountry.ts
src/lib/: api.ts  gradient.ts  socialIcons.tsx
tests/: test_docker_compose_contract.py
