[project]
name = "personal-site-backend"
version = "1.0.0"
description = "Backend API for nxksxd personal site (auth + content publishing)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers"]
